--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.8.2",
+    "axios": "^1.2.1",
+    "chart.js": "^4.1.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.1.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.0.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
